# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radqy"
version = "2025.3"
authors = [{ name = "Amir Reza Sadri", email = "ars329@case.edu" }]
description = "RadQy is a quality assurance and checking tool for quantitative assessment of magnetic resonance imaging (MRI) and computed tomography (CT) data."

keywords = ["MRI", "CT"]
license = { text = "BSD 3-Clause Clear License" }
readme = "README.rst"
requires-python = ">=3.8,<3.12"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

dependencies = [
  'importlib-metadata; python_version<"3.8"', 
  "numpy >= 1.23.1",   
  "medpy >= 0.4.0", 
  "matplotlib >= 3.5.1",  
  "pydicom >= 2.3.0",
  "pandas >= 1.4.2",  
  "scipy >= 1.8.0",  
  "scikit-learn >= 1.0.2",  
  "scikit-image >= 0.19.2",  
  "umap-learn >= 0.5.3",
  "pyyaml >= 6.0.1",
  "requests >= 2.32.3",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]

[tool.isort]
profile = "black"
known_first_party = "radqy"
skip_glob = ["**/__init__.py"]

[project.scripts]
radqy = "radqy.cli:run_cli"

[tool.setuptools]
packages = ["radqy"]

[tool.setuptools.package-data]
radqy = ["*.yaml"]
